--- a/cofi-share/src/main/res/values/strings.xml
+++ b/cofi-share/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="settings_about_item">About App</string>
     <string name="settings_pip_item">Picture in picture</string>
     <string name="settings_step_sound_item">Step change sound</string>
+    <string name="settings_background_timer_item">Allow timer in the background</string>
     <string name="settings_bug_item">Report a bug or suggest a feature</string>
     <string name="settings_combine_weight_item">Combine weight</string>
     <string name="settings_combine_weight_all">Combine every weight</string>
